--- a/CodeAnchorTest/app/src/main/res/layout/activity_my.xml
+++ b/CodeAnchorTest/app/src/main/res/layout/activity_my.xml
@@ -51,4 +51,20 @@
         android:layout_toEndOf="@+id/DistanceLabel"
         android:id="@+id/Distance"/>
 
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/requestButton"
+        android:text="Send Request"
+        android:layout_below="@+id/Distance"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/response"
+        android:layout_below="@id/requestButton"
+        android:layout_marginTop="10dp"/>
+
 </RelativeLayout>
